# msckomodo

./: .gitignore  README.md  hello.kmd  hello.s  part1.s
extra/: clean.sh  codify.sh  david.out  david.s  david.s!  david.xpm  david2.kmd  david2.xpm
komodo/: ._aasm  Makefile  Makefile.am  Makefile.in  aclocal.m4  config.h  config.h.in~  config.status  configure  configure.ac  disabled-features.txt  showerrors.sh
komodo/autom4te.cache/: output.0  output.2  output.3  output.4  output.5  output.6  output.8  output.9  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5  traces.6  traces.7  traces.8  traces.9
komodo/src/: Makefile  Makefile.am  Makefile.in  aasm  aasm.c  callbacks.c  callbacks.h  definitions.h  dotkomodo.string  flash  gdbit.sh  interface.c  interface.h  jimulator  kmd  kmd_compile  main_window.glade  sample.komodo  showerrors.sh  view.c  view.h  viewfuncs.c
komodo/src/.deps/: breakcalls.Po  breakview.Po  callbacks.Po  chump.Po  dotparse.Po  evaluate.Po  flash.Po  interface.Po  jimulator.Po  misc.Po  pixmap.Po  serial.Po  view.Po  viewfuncs.Po
komodo/src/Pixmaps/: Makefile  Makefile.in  breakpoint.xpm  pause.xpm  play.xpm  refresh.xpm  stop.xpm
komodo/src/glade/: main_window.glade
testing/: perf.data
